# instructlab

./:  .markdownlint-cli2.yaml  .commitlintrc.json  .dockerignore  .flake8  .gitignore  .gitmodules  .isort.cfg  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .spellcheck-en-custom.txt  .spellcheck.yml  .yamllint.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_ROLES.md  MAINTAINERS.md  Makefile  NOTICE.md  OWNERS  Output-quality-optimization.md  README.md  README.snippets.md  REVIEWERS.md  SECURITY.md  TROUBLESHOOTING.md  bounty.md  config.yaml  constraints-dev.txt  constraints-dev.txt.in  constraints.txt  env.yaml  example.md  flake.nix  governance.md  lab-troubleshoot.md  pyproject.toml  (+9 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  e2e-amd-radeon_pro_v520-x4.yml  labeler.yml  labels.yml  mergify.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_change.md  feature_request.md  team_recommend.md  ux_issue.md
.github/workflows/: actionlint.dockerfile  actionlint.yml  build-deploy-docs-website.yml  build.yml  commitlint.yml  constraints-update.yml  differential-shellcheck.yml  docs.yml  e2e-amd-radeon_pro_v520-x4.yml  e2e-aws-custom.yml  e2e-macos.yml  e2e-nvidia-a10g-x1.yml  e2e-nvidia-a10g-x4.yml  e2e-nvidia-l4-x1.yml  e2e-nvidia-l40s-x4-llama.yml  e2e-nvidia-l40s-x4-py312.yml  e2e-nvidia-l40s-x4-release.yml  e2e-nvidia-l40s-x4.yml  e2e-nvidia-l40s-x8.yml  e2e-nvidia-t4-x1.yml  e2e-starter.yml  e2e.yml  image-cuda.yml  label.yml  lint.yml  pr-deps.yml  pre-commit.yml  prow-github-actions.yml  pypi.yaml  reuse.yml  shellcheck.yaml  spellcheck.yaml  stale_bot.yml  status-checks.yml  test.yml  unit.yml  validate-notebooks.yml
.reuse/: dep5
.reuse/templates/: cli.jinja2
.tekton/: integration-tests.yaml
CONTRIBUTING/: CONTRIBUTING.md  FIRST_TIME_CONTRIBUTORS.md
MAINTAINERS/: STABLE.md
chat-cli/: README.md  chat-cli.toml  chat.py  requirements.txt  util.py
chat-cli/raycast/: chat.sh
chat_templates/: vllm_merlinite_chat_template.jinja  vllm_mixtral_chat_template.jinja
cli/: __init__.py  __main__.py  _version.py  client.py  common.py  config.py  download.py  download_model.py  lab.py  lab_test.py  server.py  temp_lab.py  utils.py
cli/chat/: README.md  chat-cli.toml  chat.py  requirements.txt
cli/config/: config.py  config.yml  init.py  manage.py
cli/feed/: feed.py  index.html
cli/generator/: README.md  generate_data.py  prompt.py  prompt.txt  seed_tasks.jsonl  storage.py  utils.py
cli/llamacpp/: __init__.py  llamacpp_convert_to_gguf.py  quantize
cli/mlx_explore/: README.md  convert_gguf_to_safe_tensors.py  gguf_convert_to_mlx.py  utils.py
cli/model/: list.py  model.py  tag.py
cli/sdgsvc/: sdgsvc.py
cli/tests/: test_lab_download.py  test_lab_init.py
cli/train/: README.md  linux_train.py  mlx-training.md  param.py
containers/: Containerfile.toolbox-rocm  README.md  sitecustomize.py
containers/cuda/: .Containerfile.swp  Containerfile  README.md  ilab-cuda.alias  instructlab.alias  intel-oneapi.repo
containers/hpu/: Containerfile
containers/rocm/: Containerfile  Containerfile.f40  Containerfile.ubi9  README.md  gfx-version.sh  gfx1030.conf  remove-gfx.sh  rocm60.repo
docs/: AIServer-nvidia.toml  Doxyfile  Makefile  PROMPTING-FAQ.md  README-osbuild.md  README.md  STABLE.md  amd-rocm.md  ci.md  cli.rst  cli_reference.md  conf.py  config.rst  containerization.md  converting_GGUF.md  demo-slides.md  gpu-acceleration.md  habana-gaudi.md  ilab.rst  index.rst  install-ilab-with-wsl.md  instructlab-hardware-matrix.md  instructlab_model.md  instructlab_models.md  nvidia-cuda.toml  nvidia-source.toml  qna.md  release-strategy.md  requirements.txt  rpmfusion.toml  workflow.puml
docs/accelerators/: amd-rocm.md  gpu-acceleration.md  habana-gaudi.md  index.rst
docs/api/: index.rst  instructlab.chat.rst  instructlab.generator.rst  instructlab.llamacpp.rst  instructlab.mlx_explore.rst  instructlab.rst  instructlab.train.lora_mlx.models.rst  instructlab.train.lora_mlx.rst  instructlab.train.rst
docs/maintainers/: ci.md  index.rst  release-strategy.md
docs/user/: dk_bench.md  index.rst  instructlab_models.md
mac_inference/: README.md  model_load_run.py  model_run_from_server.py  requirements.txt
mac_inference/performance/: Performance_Numbers.md
mac_inference/requirements/: requirements-llama-server.txt  (+2 more)
notebooks/: Chunking_Demo.ipynb  README.md  Training_a_LoRA_With_Instruct_Lab.ipynb  Training_a_LoRA_With_Instruct_Lab_Cli.ipynb  Training_a_LoRA_With_Labrador.ipynb
requirements/: base.txt  constraints-cpu.txt  constraints-cuda.txt  constraints.txt  cpu.txt  cuda.txt  dev.txt  hpu.txt  metal.txt  milvus.txt  mkrequirements.py  mps.txt  rocm-amd.txt  rocm-fedora.txt  rocm.txt
scripts/: add-spdx-header.sh  basic-workflow-tests.sh  cli_reference.py  e2e-ci.sh  e2e-common-settings.sh  e2e-custom-gaudi.sh  e2e-custom.sh  e2e.sh  e2e_config_edit.py  fmt.sh  functional-tests.sh  generate_constraints.sh  ilab-macos-installer.sh  install-ilab-with-cuda.sh  phased_training_resume.py  ruff.sh  setup-ilab-macos.sh  validate_notebook.py
tests/: common.py  conftest.py  hf_mock_server.py  phased_training_test.py  schema.py  taxonomy.py  test_backends.py  test_component_factory.py  test_config.py  test_config_pydantic.py  test_document_splitter.py  test_document_store_factory.py  test_feature_gates.py  test_host_port.py  test_huggingface_repo.py  test_lab.py  test_lab_check.py  test_lab_config.py  test_lab_data_generate.py  test_lab_data_list.py  test_lab_diff.py  test_lab_download.py  test_lab_evaluate.py  test_lab_generate.py  test_lab_init.py  test_lab_list.py  test_lab_model_convert.py  test_lab_model_list.py  test_lab_model_remove.py  test_lab_model_test.py  test_lab_process.py  test_lab_process_attach.py  test_lab_process_list.py  test_lab_process_remove.py  test_lab_profile.py  test_lab_rag_convert.py  test_lab_rag_ingest.py  test_lab_serve.py  test_lab_test.py  test_lab_train.py  (+8 more)
training/: README.md
(+307 files in other folders)
